--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,17 @@
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
+  <svg style="display:none;">
+    <symbol viewBox="0 0 16 16" id="my-custom-icon">
+      <path d="M2 6h9v9H2z"></path><path d="M5 3v2h7v7h2V3z"></path>
+    </symbol>l>
+  </svg>
+  <svg style="display:none;">
+    <symbol viewBox="0 0 16 16" id="my-custom-icon1">
+      <path d="M2,8c0,3.3,2.7,6,6,6c2.4,0,4.4-1.4,5.4-3.4l-1.7-1.1C11.1,10.9,9.7,12,8,12c-2.2,0-4-1.8-4-4s1.8-4,4-4
+	c1.1,0,2.1,0.5,2.8,1.2L9,7h2.9h2H14V2l-1.8,1.8C11.1,2.7,9.7,2,8,2C4.7,2,2,4.7,2,8z"/>
+    </symbol>l>
+  </svg>
   <div id="root"></div>
   <!--
       This HTML file is a template.
